--- a/ourteam.html
+++ b/ourteam.html
@@ -97,11 +97,10 @@
       <div class="card" style="width: 18rem;">
         <img src="./Screenshot 2024-12-18 145451.png" style="width:90%; height:200px; border-radius:40%" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title" style="text-align: center;">Aryan</h5>
+          <h5 class="card-title" style="text-align: center;">Aryan & Rudrika</h5>
           <p class="card-text">
-
-            Having gone through the heartbreak of himself, Now he possesses a  understanding.
-             As a mentor, he will provide you with more than just advice – he'll share wisdom born from his own journey of heartbreak, helping you to heal, grow, and overcome."</p>
+         They both are very close friend ,they are so close due to that i have to introduce both in same column. If you have any relationship issue it is perfect duo that can help you out. currently rudrika is not on instagram as she will available we will provide its link.
+            "</p>
           <a href="https://www.instagram.com/aryann_heree/?utm_source=ig_web_button_share_sheet" >
             <img src="./instagram.svg" style="height:30px; width:30px"/>
           </a>
